--- a/TimeSheetApp/packages.config
+++ b/TimeSheetApp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net461" />
+  <package id="ILMerge" version="3.0.41" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net461" />
